--- a/style.css
+++ b/style.css
@@ -18,9 +18,10 @@ h1{
     grid-column: 2;
     text-align: right;
     font-size: 45px;
+    color:#051937;
 }
 h2{
-    color: rgb(128, 8, 8);
+    color: #051937;
     writing-mode: vertical-lr;
     grid-column: 3;
     grid-row: 2 / 4;
@@ -36,7 +37,7 @@ h2{
     transform: rotate(-35deg);
 }
 h3{
-    border-top: 5px solid black;
+    border-top: 5px solid #CBC304;
     padding: 10px;
 }
 #contactInfo{
@@ -45,14 +46,14 @@ h3{
 .line{
     grid-column: 2 / 3;
     grid-row: 5;
-    border-bottom: 15px solid rgb(128, 8, 8);  
+    border-bottom: 15px solid #051937;  
 }
 .linkOne{
     grid-column: 3;
     grid-row: 5;
     font-size: 2rem;
     text-align: center;
-    color: black;
+    color: rgb(128, 8, 8);
 }
 .linkTwo{
     grid-column: 3;
@@ -60,6 +61,6 @@ h3{
     font-size: 2rem;
     text-align: right;
     margin-right: 50px;
-    color: black;
+    color: rgb(128, 8, 8);
 }
 
